<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="playBtn">Jugar</string>
    <string name="confBtn">Configurar</string>
    <string name="aboutBtn">Acerca de</string>
    <string name="exitBtn">Salir</string>
    <string name="bScore">Puntuaciones</string>
    <string name="title_activity_puntuaciones">Puntuaciones</string>

</resources>