<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Asteroides" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            style="@style/TextoAsteroides"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:text="@string/tituloAplicacion"
            android:textSize="25sp " />

        <Button
             style="@style/TextoAsteroides.Botones"
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playBtn" />

        <Button
            style="@style/TextoAsteroides.Botones"
            android:id="@+id/confBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confBtn" />

        <Button
            android:id="@+id/aboutBtn"
            style="@style/TextoAsteroides.Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lanzarAcercaDe"
            android:text="@string/aboutBtn" />

        <Button
            style="@style/TextoAsteroides.Botones"
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exitBtn" />
    </LinearLayout>

</RelativeLayout>